# antislop-sdk

./: .gitignore  README.md  detection-criteria.md  pyproject.toml
antislop/: __init__.py  cli.py
